...
        android:text="@string/bluetooth_prompt"
        android:textSize="19.5dp"
        app:layout_constraintTop_toBottomOf="@id/promptbt_title" />

   <!-- I don't know why but the color doesn't change. -->
    <android.widget.Button
        android:id="@+id/promptbt_btn_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="@style/btn_standard"
        android:text="@string/go_to_settings"
        android:textSize="18dp"
...
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/promptbt_prompt"/>

    <Button
        android:id="@+id/promptbt_btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ff0000"
        android:text="@string/not_now"
        android:textColor="@color/pinkish"
        android:textSize="18dp"
...
