...
    <string name="welcome">Welcome!</string>
    <string name="welcome_mock">Add New Student</string>
    <string name="bluetooth_required">Bluetooth Required</string>
    <string name="bluetooth_prompt">Bluetooth connection is required for this app. Please turn on Bluetooth for your device in your settings.</string>
    <string name="paste_the_url_here">Paste the URL here!</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="go_to_settings">Request Permissions</string>
    <string name="not_now">Enable in Settings</string>

    <!-- Strings for add classes activity -->
    <string name="add_your_classes">Add Classes</string>
    <string name="edit_your_classes">Edit Class</string>
    <string name="current_added_classes">Added Classes:</string>
    <string name="add_another_class">Add another Class</string>
...
